# fastapi_tutorial

./: .pylintrc  Readme.md  image_model.py  item_model.py  main.py  offer_model.py  pyproject.toml  user_model.py
app/: .env  .pylintrc  fake_items.py  main.py  pyproject.toml  unicorn_exception.py  unicorn_model.py
app/models/: item.py  model.py  offer.py  user.py
app/routers/: __init__.py  cars.py  files.py  items.py  logistics.py  models.py  unicorn.py  users.py
