[tool.poetry]
name = "python-fast-api-tutorial"
version = "0.1.0"
description = "A FastApi Tutorial with FastApi"
authors = ["Vamsi Ampolu <vamsiampolu3000@gmail.com>"]
readme = "README.md"
packages = [{include = "python_fast_api_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.0"}
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pylint = "^2.15.3"

[tool.poe.tasks]
dev = "uvicorn main:app --reload --port 4000"
format = "black ."
lint = "pylint ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

