[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Vamsi <vamsi.ampolu@complispace.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.41"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
